# gpt-booking-hotels

./: .gitignore  README.md  main.py  pyproject.toml  shuffled_request_dataset.json  tools.py  train_data.json  training_dataset.json  utils.py  val_data.json  val_results_qwen7b-hotel-instruct-v2.json  val_results_qwen7b.json
chat_models/: chat_unsloth.py
components/data_loaders/: base.py  mock.py
notebooks/: eval.ipynb  generate_dataset.ipynb  main.ipynb  train.ipynb
