[tool.poetry]
name = "mts-test-case"
version = "0.1.0"
description = ""
authors = ["Moskidon <46126524+Moskidon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-fireworks = "^0.1.3"
datasets = "^2.20.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
